# orbex-a

./: .gitignore  AGENTS.md  INSTALL.md  README.md  install_dependencies.sh  mpc_diff.txt  pyproject.toml  requirements.txt  run.py  setup.py  test_gekko_anomaly.py
config/: default.yaml
data/: plot_results.py
paper/assets/target_deflection/: properties.yaml
src/orbexa/: __init__.py
src/orbexa/cli/: __init__.py  generate_demo.py  plot_results.py
src/orbexa/control/: __init__.py  constraints.py  dynamic_tube_model.py  dynamictube.py  linearization.py  mpc.py  mpc_controller.py  mpc_problem_builder.py  problem_builder.py
src/orbexa/core/: __init__.py  config.py  dynamics.py  params.py  spacecraft.py
src/orbexa/estimation/: __init__.py  adaptor.py  dynamictube.py  enclosures.py  estimator.py
src/orbexa/planning/: __init__.py  deflection.py  distopt.py  distributed_optim.py  observation.py  optimobserve.py  task_allocation.py  taskalloc.py
src/orbexa/simulation/: __init__.py  adtmpc_mission.py  modes.py  paper_demo.py  paper_system.py  runner.py  simulator.py
src/orbexa/solvers/: __init__.py  base.py  casadi_solver.py  gekko_solver.py  scipy_solver.py
src/orbexa/utils/: __init__.py  anomaly.py  io_utils.py  math_utils.py
src/orbexa/visualization/: __init__.py  demo.py  mesh.py  orbitsim.py
tests/: __init__.py  test_adtmpc_mission.py  test_control.py  test_core.py  test_estimation.py  test_gekko_anomaly.py  test_mpc_flow.py  test_paper_concepts.py  test_paper_system.py  test_planning.py  test_simulation.py  test_solvers.py  test_utils.py  test_visualization.py
